working jdk-21 branch